@@ -1,34 +1,35 @@
 import java.util.*;
 
 class Solution {
-	static ArrayList<Integer> list = new ArrayList<>();
-
 	public int[] solution(String[] operations) {
+		LinkedList<Integer> list = new LinkedList<>();
+
 		for (String operation : operations) {
 			String[] split = operation.split(" ");
-			char order = split[0].charAt(0);
 			int num = Integer.parseInt(split[1]);
 
-			if (order == 'I') {
+			if (split[0].equals("I")) {
 				list.add(num);
 			} else {
-				if(list.isEmpty()) continue;
 
-				if(num == -1) {
-					list.remove(0);
+				if (list.isEmpty()) {
+					continue;
+				}
+
+				if (num == 1) {
+					list.pollLast();
 				} else {
-					list.remove(list.size() - 1);
+					list.pollFirst();
 				}
 			}
-			
+
 			Collections.sort(list);
 		}
-
 
 		if (list.isEmpty()) {
 			return new int[] {0, 0};
 		} else {
-			return new int[] {list.get(list.size() - 1), list.get(0)};
+			return new int[] {list.getLast(), list.getFirst()};
 		}
 	}
 }
